<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionTips">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/nutritionTips_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/nutrition_tips"
        app:titleTextColor="@color/colorWhite"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@color/colorToolbarBackground"
        android:theme="@style/AppTheme.AppBarOverlay"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nutritionTips_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/generalNutritionTips"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/nutrition_tips"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"/>

            <TextView
                android:id="@+id/nutritionTips_Children"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/tips_needed_for_children"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/nutritionTips_Men"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/tips_needed_for_men"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/nutritionTips_Women"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/tips_needed_for_women"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/nutritionTips_Hair"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/tips_for_healthy_hair"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/nutritionTips_Skin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/tips_for_healthy_skin"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/weightGainTips"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/weight_gain"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_text_view"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>