<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbarBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:gravity="center"/>

    </androidx.appcompat.widget.Toolbar>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custombutton"/>

    <ProgressBar
        android:id="@+id/register_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/cpb"
        android:indeterminateDuration="@android:integer/config_longAnimTime"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:visibility="invisible"/>

</LinearLayout>